/*
 * Copyright (c) 2023-2024 - Restate Software, Inc., Restate GmbH
 *
 * This file is part of the Restate SDK for Node.js/TypeScript,
 * which is released under the MIT license.
 *
 * You can find a copy of the license in file LICENSE in the root
 * directory of this repository or package, or at
 * https://github.com/restatedev/sdk-typescript/blob/main/LICENSE
 */
 
syntax = "proto3";

package dev.restate.sdk.javascript;

import "proto/protocol.proto";

// Type: 0xFC00 + 2
message CombinatorEntryMessage {
  int32 combinator_id = 1;

  repeated int32 journal_entries_order = 2;
}